...
        self
    }

    var title: String {
        switch self {
        case .guide:
            "Guide"
        case .calendar:
            "Calendar"
        case .library:
            "Library"
        case .learn:
            "Learn"
        }
    }

    var systemImage: String {
        switch self {
        case .guide:
...
